# Chaos-Index

./: .gitignore  AGENTS.md  CLAUDE.md  COORDINATOR_AGENT.md  Makefile  PRD.md  README.md  SUBAGENTS.md  hard_refresh.command  launch_dashboard.command  mypy.ini  pyproject.toml
configs/: default.yaml  feature_registry_nba.yaml  feature_registry_ncaam.yaml  feature_registry_nhl.yaml  model_feature_guardrails_nba.yaml  model_feature_guardrails_ncaam.yaml  model_feature_guardrails_nhl.yaml  model_feature_map_nba.yaml  model_feature_map_ncaam.yaml  model_feature_map_nhl.yaml  nba.yaml  ncaam.yaml  nhl.yaml
docs/: project-organization-deep-dive.md
notebooks/: exploration.ipynb
scripts/: export_shareable_report.py  smoke_e2e.sh
src/: __init__.py  cli.py  league_registry.py
statistical_theory/: README.md  glm-model-strategy.md  logistic-regression-validation.md
tests/: test_bayes_daily_update_smoke.py  test_bayes_offline_fit_smoke.py  test_candidate_model_comparison.py  test_change_detection.py  test_config_feature_policy.py  test_contextual_effects.py  test_cv_split.py  test_ensemble_policy.py  test_feature_pipeline_parity.py  test_feature_policy.py  test_feature_width_eval.py  test_features.py  test_glm_hardening.py  test_glm_residual_diagnostics.py  test_goals_model.py  test_hard_refresh.py  test_historical_odds_backfill.py  test_history_import.py  test_league_parity.py  test_leakage.py  test_model_feature_guardrails.py  test_model_feature_research.py  test_model_selection.py  test_multicollinearity.py  test_nba_features.py  test_nba_players_source.py  (+17 more)
(+1626 files in other folders)
