[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsmodeling-multileague-forecast"
version = "0.1.0"
description = "Production-grade NHL, NBA, and NCAAM probabilistic forecasting platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.4.0",
  "statsmodels>=0.14.0",
  "pyarrow>=14.0.0",
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "joblib>=1.3.0",
  "python-dateutil>=2.9.0",
  "tenacity>=8.2.3",
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.11.0"
]
reporting = [
  "xhtml2pdf>=0.2.17"
]

[project.scripts]
sports-forecast = "src.cli:main"
sports-query = "src.query.answer:main"
nhl-forecast = "src.cli:main"
nhl-query = "src.query.answer:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
